moved react-error-bounday & react-router-dom from devDependencies to dependencies in package.json

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-error-boundary": "^1.2.5",
+    "react-router-dom": "^5.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,8 +52,6 @@
     "eslint-config-prettier": "^6.9.0",
     "husky": "^4.0.10",
     "lint-staged": "^9.5.0",
-    "prettier": "^1.19.1",
-    "react-error-boundary": "^1.2.5",
-    "react-router-dom": "^5.1.2"
+    "prettier": "^1.19.1"
   }
 }
